--- a/app/src/main/res/layout/item_crono_layout.xml
+++ b/app/src/main/res/layout/item_crono_layout.xml
@@ -16,21 +16,25 @@
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp">
 
-        <TextView
-            android:id="@+id/nameTextView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:textAlignment="textStart"
-            android:textSize="24sp"
-            android:textStyle="bold"/>
 
         <TextView
             android:id="@+id/dateTextView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:textAlignment="textStart"
+            android:textSize="25sp"
+            android:textStyle="bold"
+            android:paddingLeft="10dp"/>
+
+
+        <TextView
+            android:id="@+id/weekTextView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_weight="2"
             android:textAlignment="center"
+            android:gravity="center"
             android:textSize="16sp"/>
 
     </LinearLayout>
@@ -40,13 +44,6 @@
         android:layout_height="match_parent"
         android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/weekTextView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:textAlignment="center"
-            android:textSize="16sp"/>
 
         <TextView
             android:id="@+id/runTextView"
