--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -13,6 +13,10 @@
         <action
             android:id="@+id/action_mainFragment_to_addCronoFragment"
             app:destination="@id/addCronoFragment" />
+        <argument
+            android:name="Semana"
+            app:argType="integer"
+            android:defaultValue="1" />
     </fragment>
     <fragment
         android:id="@+id/addCronoFragment"
